--- a/styles.css
+++ b/styles.css
@@ -1,91 +1,84 @@
-*{
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-html{
-    font-family: Raleway, Tahoma, sans-serif;
-    font-size: 16px;
+html {
+  font-family: Raleway, Tahoma, sans-serif;
+  font-size: 16px;
+  scroll-behavior: smooth;
 }
 
-body{
-    padding: 30px;
-    background-color: rgb(0, 17, 17);
-    color: white;
+body {
+  background-color: rgb(0, 17, 17);
+  color: white;
 }
 
-a{
-    color: white;
-    text-decoration:none;
+a {
+  color: white;
+  text-decoration: none;
 }
 
-a:hover{
-    background-color: rgb(26, 53, 53);
+a:hover {
+  background-color: rgb(26, 53, 53);
 }
 
-header{
-    width: 100%;
-    position: fixed;
-    padding: 10px;
-    top: 0;
-    width: 100%;
-    z-index: 1;
-    background-color: rgb(0, 17, 17);
+header {
+  width: 100%;
+  position: sticky;
+  top: 0;
+  background-color: rgb(0, 17, 17);
 }
 
-header h1, header nav{
-    text-align: center;
-    padding: 10px;
+header h1,
+header nav {
+  text-align: center;
 }
 
-header nav li{
-    display:inline-block;
-    padding: 20px;
-    background-color: rgb(26, 53, 53);
+header nav li {
+  display: inline-block;
+  padding: 20px;
+  background-color: rgb(26, 53, 53);
 }
 
-header nav li:hover{
-    background-color: rgba(26, 53, 53, 0.5);
+header nav li:hover {
+  background-color: rgba(26, 53, 53, 0.5);
 }
 
-header nav li a{
-    color: white;
-    text-decoration: none;
+header nav li a {
+  color: white;
+  text-decoration: none;
 }
 
-main{
-    position: relative;
-    padding-top: 200px;
+code {
+  font-size: larger;
+  display: inline-block;
+  padding: 5px;
+  background-color: rgb(26, 53, 53);
 }
 
-code{
-    font-size:larger;
-    display: inline-block;
-    padding: 5px;
-    background-color: rgb(26, 53, 53);
+.desc {
+  display: inline-block;
+  font-style: italic;
+  padding-left: 1%;
 }
 
-.desc{
-    display: inline-block;
-    font-style: italic;
-    padding-left: 1%;
+section h2 {
+  padding: 1%;
+  background-color: rgb(14, 121, 121);
+  margin: 1% 0;
+  display: inline-block;
 }
 
-section h2{
-    padding: 1%;
-    background-color: rgb(14, 121, 121);
-    margin: 1% 0;
-    display: inline-block;
+article {
+  margin: 0 30px;
+  padding: 10px 0;
+  border-bottom: 1px solid darkslategray;
 }
-
-article{
-    margin: 0 30px;
-    padding: 10px 0;
-    border-bottom: 1px solid darkslategray;
-}
-footer{
-    width: 100%;
-    opacity: 0.5;
-    margin-top:30px;
+footer {
+  width: 100%;
+  opacity: 0.5;
+  margin-top: 30px;
+  bottom: 0;
 }
